Fix wrong width of header panel in Timeline Work Week (T643096) (#4358)

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -723,8 +723,9 @@
             .flex-container(row, nowrap);
         }
 
-        .dx-scheduler-header-panel-cell  {
+        .dx-scheduler-header-panel-week-cell {
             flex-grow: 1;
+            flex-basis: 0;
             justify-content: center;
 
             .flex-container(row, nowrap);
